Minor fix toList()