@@ -38,7 +38,7 @@ public abstract class BpmnVersionMapper {
     public abstract BpmnProcessDTO toProcessDTO(BpmnDTO bpmnProcessDTO);
 
     public List<BpmnDTO> toDTOList(List<BpmnVersion> list) {
-        return list.stream().map(this::toDTO).collect(Collectors.toList());
+        return list.stream().map(this::toDTO).toList();
     }
 
     @Mapping(ignore = true, target = "enabled")
